@@ -1,5 +1,5 @@
 #
-# "$Id: htmldoc.list,v 1.11.2.12 2001/09/13 18:16:48 mike Exp $"
+# "$Id: htmldoc.list,v 1.11.2.13 2001/09/21 19:59:43 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for HTMLDOC.
 #
@@ -11,7 +11,7 @@
 %vendor Easy Software Products
 %license COPYING.txt
 %readme README.txt
-%version 1.8.15b4
+%version 1.8.15b5
 
 # Program
 f 0555 root sys /usr/bin/htmldoc htmldoc/htmldoc
@@ -58,5 +58,5 @@ f 0444 root sys /usr/share/doc/htmldoc/htmldoc.pdf doc/htmldoc.pdf
 f 0444 root sys /usr/share/doc/htmldoc/help.html doc/help.html
 
 #
-# End of "$Id: htmldoc.list,v 1.11.2.12 2001/09/13 18:16:48 mike Exp $".
+# End of "$Id: htmldoc.list,v 1.11.2.13 2001/09/21 19:59:43 mike Exp $".
 #
